--- a/Week20/package.json
+++ b/Week20/package.json
@@ -1,6 +1,8 @@
 {
   "type": "module",
   "dependencies": {
-    "express": "^5.1.0"
+    "body-parser": "^2.2.0",
+    "express": "^5.1.0",
+    "fs": "^0.0.1-security"
   }
 }
