--- a/Week20/mini-project/tasks.json
+++ b/Week20/mini-project/tasks.json
@@ -1,18 +1,1 @@
-[
-    {
-        "id": 2,
-        "title": "Clean the house"
-    },
-    {
-        "id": 3,
-        "title": "Buy bread"
-    },
-    {
-        "id": 4,
-        "title": "Go shopping"
-    },
-    {
-        "id": 5,
-        "title": "new task"
-    }
-]
+[{"id":1,"title":"Walk and bath dog(modified)"},{"id":2,"title":"Clean the house"},{"id":3,"title":"Buy bread"},{"id":4,"title":"Go shopping"},{"id":5,"title":"new task"}]
