--- a/Week20/package.json
+++ b/Week20/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "dependencies": {
     "body-parser": "^2.2.0",
+    "chalk": "^5.6.2",
     "express": "^5.1.0",
     "fs": "^0.0.1-security"
   }
