--- a/hackathon_2/task-tracker/backend/.env
+++ b/hackathon_2/task-tracker/backend/.env
@@ -1,7 +1,8 @@
 DB_USER=postgres
 DB_PASSWORD=PercevalDumbledore230
 DB_HOST=localhost
-DB_NAME=taskDB
+DB_NAME=taskdb
 DB_PORT=5432
 PORT=5000
-JWT_SECRET=AlbusPercevalWulfricBrianDumbledore230#
+JWT_SECRET=secretkey
+# AlbusPercevalWulfricBrianDumbledore230#
